style.css
@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Spartan", sans-serif;
}

html {
  scroll-behavior: smooth;
}

/* Global Styles */

h1 {
  font-size: 50px;
  line-height: 64px;
  color: #222;
}

h2 {
  font-size: 46px;
  line-height: 54px;
  color: #222;
}

h4 {
  font-size: 20px;
  color: #222;
}

h6 {
  font-weight: 700;
  font-size: 12px;
}

p {
  font-size: 16px;
  color: #693808;
  margin: 15px 0 20px 0;
}

.section-p1 {
  padding: 40px 80px;
}

.section-m1 {
  margin: 40px 0;
}

.logo {
  border-radius: 25px;
}

button.normal {
  font-size: 14px;
  font-weight: 600;
  padding: 15px 30px;
  color: #000;
  background-color: #fff;
  border-radius: 4px;
  cursor: pointer;
  border: none;
  outline: none;
  transition: 0.2s;
}

button.white {
  font-size: 13px;
  font-weight: 600;
  padding: 11px 18px;
  color: #fff;
  background-color: transparent;
  cursor: pointer;
  border: 1px solid white;
  outline: none;
  transition: 0.2s;
}

body {
  width: 100%;
}

/* Header Start */
#header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 20px 80px;
  background: #f1c895;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
  z-index: 999;
  position: sticky;
  top: 0;
  left: 0;
}

#navbar {
  display: flex;
  align-items: center;
  justify-content: center;
}

#navbar li {
  list-style: none;
  padding: 0 15px;
  position: relative;
}

#navbar li a {
  text-decoration: none;
  font-size: 16px;
  font-weight: 600;
  color: #1a1a1a;
  transition: 0.3s ease;
}

#navbar li a:hover,
#navbar li a.active {
  color: #693808;
}

#navbar li a.active::after,
#navbar li a:hover::after {
  content: "";
  width: 30%;
  height: 2px;
  background: #693808;
  position: absolute;
  bottom: -4px;
  left: 20px;
}

#mobile {
  display: none;
  align-items: center;
}

#close {
  display: none;
}

/* Home Page */
#hero {
  background-image: url("img/hero4.png");
  height: 90vh;
  width: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  padding: 0 80px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

#hero h4 {
  padding-bottom: 15px;
}
#hero h1 {
  color: #693808;
}
#hero button {
  background-image: url("img/button.png");
  background-color: transparent;
  color: #693808;
  border: 0;
  padding: 14px 80px 14px 65px;
  cursor: pointer;
  font-weight: 700;
  font-size: 15px;
}

/* Features Section */

#feature {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}
#feature .fe-box {
  width: 180px;
  text-align: center;
  padding: 25px 15px;
  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.3);
  border: 1px solid #cce7d0;
  margin: 15px 0;
}

#feature .fe-box:hover {
  box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
}

#feature .fe-box img {
  width: 100%;
  margin-bottom: 10px;
}

#feature .fe-box h6 {
  display: inline-block;
  padding: 9px 8px 6px 8px;
  line-height: 1;
  border-radius: 4px;
  columns: #693808;
  background-color: #fddde4;
}

#feature .fe-box:nth-child(2) h6 {
  background-color: #cdebbc;
}
#feature .fe-box:nth-child(3) h6 {
  background-color: #d1e8f2;
}
#feature .fe-box:nth-child(4) h6 {
  background-color: #cdd4f8;
}
#feature .fe-box:nth-child(5) h6 {
  background-color: #f6dbf6;
}
#feature .fe-box:nth-child(6) h6 {
  background-color: #fff2e5;
}

/* Product Section */
#product1 {
  text-align: center;
}

#product1 .pro-container {
  display: flex;
  justify-content: space-between;
  padding-top: 20px;
  flex-wrap: wrap;
}

#product1 .pro {
  width: 23%;
  min-width: 250px;
  padding: 10px 12px;
  border: 1px solid #cce7d0;
  border-radius: 25px;
  cursor: pointer;
  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
  margin: 15px 0;
  transition: 0.2s ease;
  position: relative;
}

#product1 .pro:hover {
  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
}

#product1 .pro img {
  width: 100%;
  border-radius: 20px;
}

#product1 .pro .des {
  text-align: start;
  padding: 10px 0;
}
#product1 .pro .des span {
  color: #606063;
  font-size: 12px;
}

#product1 .pro .des h5 {
  padding-top: 7px;
  color: #1a1a1a;
  font-size: 14px;
}

#product1 .pro .des i {
  font-size: 12px;
  color: rgb(243, 183, 25);
}

#product1 .pro .des h4 {
  padding-top: 7px;
  font-size: 15px;
  font-weight: 700;
  color: #693808;
}

#product1 .pro .cart {
  width: 40px;
  height: 40px;
  line-height: 40px;
  border-radius: 50px;
  background-color: #e8f6ea;
  font-size: 500;
  color: #693808;
  border: 1px solid #cce7d0;
  position: absolute;
  bottom: 20px;
  right: 10px;
}

/* Banner start */
#banner {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-image: url("img/banner/b2.jpg");
  width: 100%;
  height: 40vh;
  background-size: cover;
  background-position: center;
}

#banner h4 {
  color: white;
  font-size: 16px;
}

#banner h2 {
  color: white;
  font-size: 30px;
  padding: 10px 0;
}

#banner h2 span {
  color: #ef3636;
}

#banner button:hover {
  background: #693808;
  color: #fff;
}

/* Small Banner Start */

#sm-banner {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
#sm-banner .banner-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  background-image: url("img/banner/b17.jpg");
  min-width: 580px;
  height: 50vh;
  background-size: cover;
  background-position: center;
  padding: 30px;
}

#sm-banner .banner-box2 {
  background-image: url("img/banner/b10.jpg");
}

#sm-banner h4 {
  color: #fff;
  font-synthesis: 20px;
  font-weight: 300;
}

#sm-banner h2 {
  color: #fff;
  font-synthesis: 28px;
  font-weight: 800;
}
/* ... */

